--- a/index.html
+++ b/index.html
@@ -960,30 +960,38 @@
   <style>
     /* ... existing styles ... */
     @media (min-width: 900px) {
-      .bottom-toolbar, .toolbar-content, .button-group {
-        flex-wrap: nowrap !important;
-        overflow-x: auto !important;
-        white-space: nowrap !important;
+      .bottom-toolbar {
+        width: 100vw !important;
+        min-width: 100vw !important;
+        max-width: 100vw !important;
+        margin: 0 !important;
+        padding: 0 !important;
       }
       .toolbar-content {
+        width: 100vw !important;
+        min-width: 100vw !important;
+        max-width: 100vw !important;
         display: flex !important;
         flex-direction: row !important;
         align-items: center !important;
         justify-content: flex-start !important;
-        gap: 8px !important;
+        gap: 0 !important;
+        overflow-x: auto !important;
+        white-space: nowrap !important;
+        margin: 0 !important;
+        padding: 0 !important;
       }
       .button-group {
         display: flex !important;
         flex-direction: row !important;
         align-items: center !important;
-        gap: 8px !important;
+        gap: 0 !important;
+        margin: 0 !important;
+        padding: 0 !important;
       }
       .toolbar-button, .button-group > button, .toolbar-content > button {
         margin: 0 !important;
         border-radius: 4px !important;
-        border-right: none !important;
-      }
-      .toolbar-button:last-child, .button-group > button:last-child, .toolbar-content > button:last-child {
         border-right: none !important;
       }
     }
