--- a/index.html
+++ b/index.html
@@ -994,6 +994,9 @@
         border-radius: 4px !important;
         border-right: none !important;
       }
++     .button-group:not(:last-child) {
++       margin-right: 0 !important;
++     }
     }
   </style>
 </head>
