--- a/index.html
+++ b/index.html
@@ -1091,7 +1091,7 @@
 
 <div class="toggle-layers" onclick="toggleLayerControl()">🗺️ Show Layers</div>
 
-<div class="bottom-toolbar bg-light border-top" id="functionToolbar">
+<div class="bottom-toolbar bg-light border-top" id="functionToolbar" style="display:none;">
   <div class="toolbar-header d-flex align-items-center justify-content-between p-2" onclick="toggleToolbar()">
     <h3 class="m-0 d-flex align-items-center gap-2">
       <span>Gully Inspection System</span>
